--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,10 +117,11 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+  html {
+    @apply bg-background text-foreground;
   }
-  body {
+
+  html.dark {
     @apply bg-background text-foreground;
   }
 }
